// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en el GifGrid debe de mostrar items cuando se carga imagenes en useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquiera"
      url="https://cualquiera.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueba en el GifGrid debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    naruto
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
